Clean versions of all notebooks; asdded microbiome data

--- a/notebooks/4. Data Manipulation with Pandas.ipynb
+++ b/notebooks/4. Data Manipulation with Pandas.ipynb
@@ -37,15 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = pd.Categorical(['a', 'b', 'b', 'c', 'a', 'b', 'a', 'a', 'a', 'a'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "c = pd.Categorical(['a', 'b', 'b', 'c', 'a', 'b', 'a', 'a', 'a', 'a'])\n",
     "c"
    ]
   },
@@ -162,38 +154,6 @@
    "outputs": [],
    "source": [
     "dta.factor.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Load NFS data again. Convert `fditemno` to a Categorical Type. Use describe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [Solution Here]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load solutions/load_nfs_categorical.py"
    ]
   },
   {
@@ -472,44 +432,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Create a datetime colume named 'date' for NFS_1974.csv NFS diary data\n",
-    "  * styr: Survey year\n",
-    "  * stmth: Survey month\n",
-    "  * logday: Day in the log (assume logdays are actual days)\n",
-    "* *Hint*: You could do this in two ways\n",
-    "  * Look at the `parse_dates` keyword of `read_csv`\n",
-    "  * Create the date after reading in the DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [Solution here]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load solutions/load_nfs_datetime.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Merging and Joining DataFrames"
    ]
   },
@@ -519,11 +441,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is a bit slow because of the date parsing\n",
-    "\n",
     "transit = pd.read_csv(\"../data/AIS/transit_segments.csv\", \n",
     "                      parse_dates=['st_time', 'end_time'],\n",
     "                      infer_datetime_format=True)\n",
+    "\n",
     "vessels = pd.read_csv(\"../data/AIS/vessel_information.csv\")"
    ]
   },
@@ -674,30 +595,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Join the 1974 Household NFS data with the Diary data\n",
-    "* The data is in `../data/NationalFoodSurvey/NFS_1974/`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load solutions/join_nfs.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Concatenation"
    ]
   },
@@ -730,16 +627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.shape"
+    "print(df1.shape, df2.shape)"
    ]
   },
   {
@@ -799,41 +687,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Join all of the diary data together in a single DataFrame\n",
-    "  * *Hint*: you might find `glob.glob` useful\n",
-    "* You will need to add a unique field identifying the survey year to each DataFrame\n",
-    "  * *Hint*: you might find a regular expression using `re.search` useful"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [Solution here]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load solutions/concat_nfs.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Text Data Manipulation"
    ]
   },
@@ -884,39 +737,6 @@
    "outputs": [],
    "source": [
     "vessels.type.str.split('/', expand=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Load the file `\"Ref_ food groups.txt\"`\n",
-    "* Get all of the food groups that contain the word milk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [Solution here]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load solutions/nfs_dairy.py"
    ]
   }
  ],
